fixed layout issues to match screenshot

--- a/style.css
+++ b/style.css
@@ -1,56 +1,55 @@
-html{
-	background: #777;
+body {
+	padding: 0;
+	margin: 0;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	background-color: #777;
+}
+
+section {
+	width: 495px;
+	height: 275px;
+	float: left;
+}
+
+header,
+nav,
+section,
+aside,
+h1,
+p,
+footer {
+	background-color: #ebebeb;
+	text-align: center;
+	margin: 10px;
+	padding: 30px 0;
 	color: #777;
 }
 
-body{
+aside {
+	float: right;
+	width: 44%;
+	height: 275px;
+}
+
+footer {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+article {
+	background-color: #777;
+	margin: 20px 10px 0 10px;
+	padding: 10px 5px;
+	color: #ebebeb;
+}
+
+.container {
 	width: 960px;
 	margin: 10px auto;
 }
 
-p, h1{
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	display: block;
-	text-align: center;
-	background: #ebebeb;
-	margin: 10px;
-	padding: 15px;
-}
-
-header, nav, footer{
-	height: 75px;
-}
-
-section{
-	float: left;
-	width: 495px;
-	margin-right: 5px;
-}
-
-aside{
-	float: right;
-	width: 455px;
-	height: 294px;
-	margin-left: 5px;
-}
-
-footer{
-	clear: both;
-}
-
-header, nav, section, aside, footer{
-	margin: 10px 0;
-	background: #ebebeb;
-}
-
-article{
-	background: #777;
-	margin: 10px;
-	padding: 10px;
-}
-
 .clear {
-	background: transparent;
-	color: #ebebeb;
+	overflow: auto;
 }
